fixed signup alignment issue

--- a/app/assets/stylesheets/flatstrap_overrides.css.scss
+++ b/app/assets/stylesheets/flatstrap_overrides.css.scss
@@ -28,8 +28,7 @@ textarea {
 }
 
 .wrapper {
-  max-width: 940px;
-	min-height: 100%;
+  min-height: 100%;
   height: auto !important;
   height: 100%;
   margin: 0 auto -75px;
